--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ html <!DOCTYPE html>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>TransLab</title>
 </head>
 <body>
-  
+    <section class= "grid">
+
+    </section>
 </body>
 </html>
