--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
-html <!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>TransLab</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <!-- Mi style CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <title>TransLab</title>
+  </head>
+  <body>
+     <!-- Grid Principal -->
     <section class= "grid">
-
+        <section class= "row">
+          <section class= "col-12">
+              <img src="docs/imagen.png" id="logo" class="img-fluid" alt="Responsive image">
+              <section class= "row">
+                  <div class="col-1"></div>
+                  <div class="col-10 Justify align center">
+                      <input class="form-control sm-2 inputs" type="text" placeholder="Correo Electronico" size="100" id="inputCorreo">
+                      <input class="form-control sm-2 inputs" type="text" placeholder="Contraseña" size="100" id="inputPass">
+                  </div>
+                  <div class="col-1"></div>
+                
+              </section>
+          </section>
+        </section>
     </section>
-</body>
+    <!-- My JavaScript -->
+    <script src="js/main.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  </body>
 </html>
