se termina el entorno grafico del login

--- a/index.html
+++ b/index.html
@@ -14,15 +14,35 @@
     <section class= "grid">
         <section class= "row">
           <section class= "col-12">
+              <!-- Logo encabezado -->
+              <section class="row Justify align center">
+                <div class="col-12  Justify align center">
               <img src="docs/imagen.png" id="logo" class="img-fluid" alt="Responsive image">
+                </div>
+              </section>
+              <section class="row Justify align center">
+                  <div class="col-12  Justify align center">
+              <article><H2 id="title">TRANS-LAB</H2></article>
+              </div>
+              </section>
+              <!-- Formulario Datos Cliente -->
               <section class= "row">
                   <div class="col-1"></div>
                   <div class="col-10 Justify align center">
                       <input class="form-control sm-2 inputs" type="text" placeholder="Correo Electronico" size="100" id="inputCorreo">
                       <input class="form-control sm-2 inputs" type="text" placeholder="Contraseña" size="100" id="inputPass">
+                      <button class="btn sm-0" type="button" id="btnInicio">Iniciar Sesión</button>
+                      <article>
+                        <p id="forgotPass">¿Olvidaste tu Contraseña?</p>
+                      </article>
                   </div>
                   <div class="col-1"></div>
-                
+                  <div class="col-12">
+                      <article>
+                          <p>¿No tienes cuenta? <span id="registrate">Registrate</span>
+                        </article>
+                  </div>
+                  
               </section>
           </section>
         </section>
