--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- Mi style CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleLogin.css">
     <title>TransLab</title>
   </head>
   <body>
@@ -29,8 +29,10 @@
               <section class= "row">
                   <div class="col-1"></div>
                   <div class="col-10 Justify align center">
-                      <input class="form-control sm-2 inputs" type="text" placeholder="Correo Electronico" size="100" id="inputCorreo">
-                      <input class="form-control sm-2 inputs" type="text" placeholder="Contraseña" size="100" id="inputPass">
+                      <div id="alertEmail"> </div>
+                      <input class="form-control sm-2 inputs" type="email" placeholder="Correo Electronico" pattern="/[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$/" size="100" id="inputCorreo">
+                      <input class="form-control sm-2 inputs" type="password" pattern= "/^\d{8}$/" placeholder="Contraseña" size="100" id="inputPass">
+                      <div id="alertPassword"> </div>
                       <button class="btn sm-0" type="button" id="btnInicio">Iniciar Sesión</button>
                       <article>
                         <p id="forgotPass">¿Olvidaste tu Contraseña?</p>
@@ -48,7 +50,7 @@
         </section>
     </section>
     <!-- My JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
