--- a/home.html
+++ b/home.html
@@ -13,13 +13,35 @@
      <!-- Grid Principal -->
     <section class= "grid">
         <section class= "row">
-          <section class= "col-12 justify-content-right">
-              <nav class="navbar navbar-light" class="navbar">
-                  <a class="navbar-brand"></a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                  </button>    
-              </nav>
+          <section class= "col-12-sm ">
+              <section class="col-12-sm" id="navbar"
+                class="navbar-toggler-icon"></section>
+                <h4>TransLab</h4>
+              </section>
+                <section id="menu">
+                    <ul class="nav flex-column">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#">Disabled</a>
+                        </li>
+                      </ul>
+                </section>
           </section>
         </section>
     </section>
