--- a/home.html
+++ b/home.html
@@ -13,36 +13,37 @@
      <!-- Grid Principal -->
     <section class= "grid">
         <section class= "row">
-          <section class= "col-12-sm ">
-              <section class="col-12-sm" id="navbar"
-                class="navbar-toggler-icon"></section>
-                <h4>TransLab</h4>
-              </section>
-                <section id="menu">
-                    <ul class="nav flex-column">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                          </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                          </div>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link disabled" href="#">Disabled</a>
-                        </li>
-                      </ul>
-                </section>
-          </section>
+         
+            <!--seccion navbar-->
+            <section class="col-4">
+                <section class="wrapper nav flex-sm-column" id="wrapper">
+                    <nav class="navbar-nav navbar-dark bg-dark nav flex-sm-column" id="sidebar">
+                      <a class="navbar-brand nav flex-sm-column"></a>
+                      <button class="navbar-toggler" type="button" data-toggle="collapse" id="btnNav" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                          </button>
+                      <div class="content nav flex-sm-column" id="navbarSupportedContent" >
+                              <div class="form-group row justify-content-center">
+                                <div class="btn-group-vertical " role="group" aria-label="Basic example">
+                                  <button type="button" class="btn btn-secondary" id="btnHome">Ver Saldo</button>
+                                  <button type="button" class="btn btn-secondary" id="btnAlumnas" >Calcular Tarifa</button>
+                                  <button type="button" class="btn btn-secondary " id="btnCohorts">Perfil</button>
+                                  <button type="button" class="btn btn-secondary" id="btnHome">Preguntas Frecuentes</button>
+                                  <button type="button" class="btn btn-secondary" id="btnAlumnas" >Home</button>
+                                </div>
+                              </div>     
+                      </div>
+                    </nav>
+                  </section>
+            </section>
+            <!--Seccion Principal-->
+              <section class="col-8">
+                  <section class="col-2"></section>
+                  <section class="col-4">
+                <button class="btn sm-0 btnPrin" type="button" id="btnInicio">Ver Saldo</button></section>
+                <section class="col-2"></section>
+            </section>
+          
         </section>
     </section>
     <!-- My JavaScript -->
