--- a/home.html
+++ b/home.html
@@ -38,10 +38,14 @@
             </section>
             <!--Seccion Principal-->
               <section class="col-8">
-                  <section class="col-2"></section>
-                  <section class="col-4">
-                <button class="btn sm-0 btnPrin" type="button" id="btnInicio">Ver Saldo</button></section>
-                <section class="col-2"></section>
+                  <section class="col-8"></section>
+                  <section class="col-8">
+                <button class="btn sm-0 btnPrin" type="button" id="btnInicio">Ver Saldo</button>
+                <button class="btn sm-0 btnPrin" type="button" id="btnInicio">Calcular Tarifa</button>
+                <button class="btn sm-0 btnPrin" type="button" id="btnInicio">Perfil</button>
+                <button class="btn sm-0 btnPrin" type="button" id="btnInicio">Preguntas Frecuentes</button>
+              </section>
+                
             </section>
           
         </section>
